# castor

./: .editorconfig  .env  .env.example  .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  docker-compose-base.yml  docker-compose-dev.yml  docker-compose.override.yml  docker-compose.yml  fig.yml  pyproject.toml  requirements-dev.txt  requirements.freeze.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  ci.yml  release.yml
castor/: __main__.py  manage.py  server.py  settings.py  tasks.py  utils.py  version.py
castor/castor/: celery.py  settings.py  urls.py  wsgi.py
castor/docker_events/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  views.py
castor/docker_events/migrations/: 0001_initial.py  0001_squashed_0003_auto_20170129_1118.py  0002_auto_20170123_0930.py  0003_auto_20170129_1118.py  0004_auto_20171220_1809.py
castor/docker_servers/: admin.py  apps.py  models.py  serializers.py  views.py
castor/docker_servers/migrations/: 0001_initial.py  0001_squashed_0003_auto_20170122_1730.py  0002_auto_20170122_1726.py  0003_auto_20170122_1730.py
castor/web/: views.py
castor/webhooks/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  views.py
castor/webhooks/migrations/: 0001_initial.py  (+12 more)
examples/: .env  .env.example  .env.production  docker-compose.yml  settings.json
script/: dashboard  server  test  worker
scripts/: celery-start.sh  docker-build-image.sh  docker-deploy.sh
tests/: __init__.py  base.py  settings.py  tasks.py
(+15 files in other folders)
