[tool.poetry]
name = "castor"
version = "2.0.0"
description = "Send Docker Engine events as webhooks"
authors = ["Paris Kasidiaris <paris@sourcelair.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.1"
sentry-sdk = "^1.14.0"
aiodocker = "^0.21.0"
sec = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.2.0"
mypy = "^0.991"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
